--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
-    "name": "jc-it/package-base",
-    "description": "PACKAGE_BASE.",
+    "name": "jc-it/yii2-monolog-slack-handler",
+    "description": "A Yii2 implementation of a Slack Monolog handler with more context and formatting.",
     "type": "library",
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+
+        "samdark/yii2-psr-log-target": "^1.1.3",
+        "yiisoft/yii2": "^2.0.47"
     },
     "require-dev": {
         "captainhook/plugin-composer": "^5.3",
